finished connect command
